# ai-gateway

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/api/: routes.py
app/models/: canonical.py  errors.py  openai_contract.py  usage.py
app/providers/: base.py  gemini_provider.py  openai_provider.py
app/services/: normalizer.py  pricing.py  request_store.py  router.py  streaming.py  usage.py  usage_store.py
app/utils/: ids.py  logging.py  media.py
deploy/: Caddyfile
docs/: api-contract.md  architecture.md  decisions.md  product.md
examples/: openai_sdk_client.py
scripts/: smoke_structured_output.py
tests/: conftest.py  test_chat.py  test_embeddings.py  test_health.py  test_models.py  test_normalizer.py  test_openai_sdk_compat.py  test_postgres_store.py  test_pricing.py  test_providers.py  test_requests.py  test_usage.py
