[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-gateway"
version = "0.1.0"
description = "Internal OpenAI-compatible gateway that routes LLM calls to multiple providers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "openai>=1.30",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
